fix(web): news list overflow-y fix

--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -5,6 +5,7 @@ html,
 body {
   scroll-behavior: smooth;
   -webkit-overflow-scrolling: touch;
+  overflow-x: hidden;
 }
 
 body {
